--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.10",
+    "library-date-react": "^1.0.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
     "react-datetime-picker": "^5.6.0",
